.happypack/s-1158614379
SyntaxError: Unexpected token (88:10)

[0m [90m 86 | [39m  console[33m.[39mdir(orderLearnSwiper)[33m;[39m
 [90m 87 | [39m
[31m[1m>[22m[39m[90m 88 | [39m  console[33m.[39m(orderLearnSwiper)[33m;[39m
 [90m    | [39m          [31m[1m^[22m[39m
 [90m 89 | [39m  [90m// orderLearnSwiper = new Swiper('.swiper-container',{[39m
 [90m 90 | [39m  [90m//   pagination: '.swiper-pager',[39m
 [90m 91 | [39m  [90m//   loop:true,[39m[0m

BabelLoaderError: SyntaxError: Unexpected token (88:10)

[0m [90m 86 | [39m  console[33m.[39mdir(orderLearnSwiper)[33m;[39m
 [90m 87 | [39m
[31m[1m>[22m[39m[90m 88 | [39m  console[33m.[39m(orderLearnSwiper)[33m;[39m
 [90m    | [39m          [31m[1m^[22m[39m
 [90m 89 | [39m  [90m// orderLearnSwiper = new Swiper('.swiper-container',{[39m
 [90m 90 | [39m  [90m//   pagination: '.swiper-pager',[39m
 [90m 91 | [39m  [90m//   loop:true,[39m[0m

    at transpile (/Users/kz/projects/edusoho/node_modules/.6.2.10@babel-loader/lib/index.js:52:13)
    at Object.module.exports (/Users/kz/projects/edusoho/node_modules/.6.2.10@babel-loader/lib/index.js:133:12)
    at applySyncOrAsync (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:341:21)
    at apply (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:268:5)
    at /Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:131:7
    at applyPitchLoader (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:184:14)
    at applyPitchLoader (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:192:14)
    at applyPitchLoaders (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:222:4)
    at applyLoaders (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:116:3)
    at HappyWorker.compile (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/HappyWorker.js:32:3)
    at Object.HappyForegroundThreadPool.compile (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/HappyForegroundThreadPool.js:61:14)
    at HappyPlugin.compileAndUpdateCache (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/HappyPlugin.js:345:14)
    at HappyPlugin.compileInForeground (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/HappyPlugin.js:320:25)
    at HappyPlugin.compile (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/HappyPlugin.js:236:32)
    at Object.HappyLoader (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/HappyLoader.js:34:15)
    at WEBPACK_CORE_LOADER_EXECUTION (/Users/kz/projects/edusoho/node_modules/.0.6.9@webpack-core/lib/NormalModuleMixin.js:155:71)